--- a/legend/src/styles/globals.css
+++ b/legend/src/styles/globals.css
@@ -91,3 +91,16 @@ input::-webkit-outer-spin-button:focus {
 #milestone::-webkit-scrollbar-thumb {
   background-color: #d49e78;
 }
+
+#cart {
+  transform: scale(1.1);
+  animation: shake 0.5s ease;
+}
+@keyframes shake {
+  0% { transform: translate(0, 0) rotate(0); }
+  20% { transform: translate(-10px, 0) rotate(-20deg); }
+  30% { transform: translate(10px, 0) rotate(20deg); }
+  50% { transform: translate(-10px, 0) rotate(-10deg); }
+  60% { transform: translate(10px, 0) rotate(10deg); }
+  100% { transform: translate(0, 0) rotate(0); }
+}
